--- a/bio.html
+++ b/bio.html
@@ -2,5 +2,8 @@
 layout: default
 ---
 
+<p>I am an engineer turned designer, based out of Bengaluru, India.</p>
+<p>I am currently working with a startup called Exotel. Where I am helping to design a better software product</p>
+<p>And I love making paper planes.</p>
 
-<h2>Let's talk about me</h2>
+ 
