--- a/bio.html
+++ b/bio.html
@@ -2,8 +2,12 @@
 layout: default
 ---
 
-<p>I am an engineer turned designer, based out of Bengaluru, India.</p>
-<p>I am currently working with a startup called Exotel. Where I am helping to design a better software product</p>
-<p>And I love making paper planes.</p>
+<p>I am a designer who interested in people, places, and perspectives.</p>
+<p>I am fascinated about psychology, philosophy, and history.</p>
+<p>And I would love to make paper planes.</p>
+<p>That's me &#9759;, in some green place. And I do that now and then.</p>
+<img src="{{site.baseurl}}/assets/images/iam.jpeg" alt="It's me!">
+
+ 
 
  
