--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@ layout: default
 
 <p>I am a designer who interested in people, places, and perspectives.</p>
 <p>I am fascinated about psychology, philosophy, and history.</p>
-<p>And I would love to make paper planes.</p>
+<p>And I love to make paper planes.</p>
 <p>That's me &#9759;, in some green place. And I do that now and then.</p>
 <img src="{{site.baseurl}}/assets/images/iam.jpeg" alt="It's me!">
 
