--- a/bio.html
+++ b/bio.html
@@ -2,11 +2,15 @@
 layout: default
 ---
 
-<p>I am a designer who interested in people, places, and perspectives.</p>
-<p>I am fascinated about psychology, philosophy, and history.</p>
-<p>And I love to make paper planes.</p>
-<p>That's me &#9759;, in some green place. And I do that now and then.</p>
-<img src="{{site.baseurl}}/assets/images/iam.jpeg" alt="It's me!">
+<p>I am a designer who interested in people, places, and perspectives.
+I am fascinated about psychology, philosophy, and history.
+And I love to make paper planes.
+That's me &#9759;, in some green place. And I do that now and then.</p>
+<figure>
+	<img src="{{site.baseurl}}/assets/images/iam.jpeg" alt="It's me!">
+	<figcaption>The man with an umbrella!</figcaption>
+</figure>
+
 
  
 
