--- a/bio.html
+++ b/bio.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <p>I am a designer who interested in people, places, and perspectives.
-I am fascinated about psychology, philosophy, and history.
+I am fascinated by psychology, education, and philosophy.
 And I love to make paper planes.
-That's me &#9759;, in some green place. And I do that now and then.</p>
+That's me &#9759;, in the middle of a trek. Yes, I do love mountains.</p>
 <figure>
 	<img src="{{site.baseurl}}/assets/images/iam.jpeg" alt="It's me!">
 	<figcaption>The man with an umbrella!</figcaption>
