--- a/bio.html
+++ b/bio.html
@@ -8,7 +8,7 @@ And I love to make paper planes.
 That's me &#9759;, in the middle of a trek. Yes, I do love mountains.</p>
 <figure>
 	<img src="{{site.baseurl}}/assets/images/iam.jpeg" alt="It's me!">
-	<figcaption>The man with an umbrella!</figcaption>
+	<figcaption>HELLO PEOPLE !</figcaption>
 </figure>
 
 
