--- a/bio.html
+++ b/bio.html
@@ -5,10 +5,10 @@ layout: default
 <p>I am a designer who interested in people, places, and perspectives.
 I am fascinated by psychology, education, and philosophy.
 And I love to make paper planes.
-That's me &#9759;, in the middle of a trek. Yes, I do love mountains.</p>
+That's me &#9759;. Yes, I do love mountains.</p>
 <figure>
 	<img src="{{site.baseurl}}/assets/images/iam.jpeg" alt="It's me!">
-	<figcaption>HELLO PEOPLE !</figcaption>
+	<figcaption>HELLO PEOPLE!</figcaption>
 </figure>
 
 
