--- a/bio.html
+++ b/bio.html
@@ -2,13 +2,12 @@
 layout: default
 ---
 
-<p>I am a designer who interested in people, places, and perspectives.
-I am fascinated by psychology, education, and philosophy.
-And I love to make paper planes.
-That's me &#9759;. Yes, I do love mountains.</p>
+<p>I am a designer who interested in people, places, and perspectives.Currently based in Bangalore, India. I am fascinated by psychology, education, and philosophy.
+</p>
+<p>That's me &#9759;. Yes, I do love mountains.</p>
 <figure>
 	<img src="{{site.baseurl}}/assets/images/iam.jpeg" alt="It's me!">
-	<figcaption>HELLO PEOPLE!</figcaption>
+	<figcaption>HELLO WORLD!</figcaption>
 </figure>
 
 
