--- a/_pages/bio.html
+++ b/_pages/bio.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<h1>About me</h1>
 <p>I am a designer who interested in people, places, and perspectives.Currently based in Bangalore, India. I am fascinated by psychology, education, and philosophy.
 </p>
 <p>That's me &#9759;. Yes, I do love mountains.</p>
