--- a/_pages/bio.html
+++ b/_pages/bio.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+permalink: /bio/
+title: Bio
 ---
 <h1>About me</h1>
 <p>I am a designer who interested in people, places, and perspectives.Currently based in Bangalore, India. I am fascinated by psychology, education, and philosophy.
